# windex

./: .gitignore  README.md  pyproject.toml
windex/: cli.py  diaphora_script.py  myscript.py
